# Simple-Server

./: .gitignore  CMakeLists.txt  README.md  f.c  iconv_test.c  main.c  str.c  web.c
html/: _index.html  app.css  app.js  editor.css  editor.js  layout.css  notes_notepad.db  package-lock.json  package.json  reset.css  server.js  template.html  test.js  toast.css  toast.js
htmls/: 404.html
